@@ -17,6 +17,26 @@
 
 @synthesize window;
 
+- (void) removeStartupFlicker
+{
+	//
+	// THIS CODE REMOVES THE STARTUP FLICKER
+	//
+	// Uncomment the following code if you Application only supports landscape mode
+	//
+#if GAME_AUTOROTATION == kGameAutorotationUIViewController
+
+//	CC_ENABLE_DEFAULT_GL_STATES();
+//	CGSize size = [director winSize];
+//	CCSprite *sprite = [CCSprite spriteWithFile:@"Default.png"];
+//	sprite.position = ccp(size.width/2, size.height/2);
+//	sprite.rotation = -90;
+//	[sprite visit];
+//	[glView swapBuffers];
+//	CC_ENABLE_DEFAULT_GL_STATES();
+	
+#endif // GAME_AUTOROTATION == kGameAutorotationUIViewController	
+}
 - (void) applicationDidFinishLaunching:(UIApplication*)application
 {
 	// Init the window
@@ -57,6 +77,10 @@
 	// If the rotation is going to be controlled by a UIViewController
 	// then the device orientation should be "Portrait".
 	//
+	// IMPORTANT:
+	// By default, this template only supports Landscape orientations.
+	// Edit the RootViewController.m file to edit the supported orientations.
+	//
 #if GAME_AUTOROTATION == kGameAutorotationUIViewController
 	[director setDeviceOrientation:kCCDeviceOrientationPortrait];
 #else
@@ -79,7 +103,10 @@
 	// It can be RGBA8888, RGBA4444, RGB5_A1, RGB565
 	// You can change anytime.
 	[CCTexture2D setDefaultAlphaPixelFormat:kCCTexture2DPixelFormat_RGBA8888];
+
 	
+	// Removes the startup flicker
+	[self removeStartupFlicker];
 	
 	// Run the intro Scene
 	[[CCDirector sharedDirector] runWithScene: [HelloWorld scene]];		
